# FastH-SingleAuth

./: README.en.md  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  create_fastapi_app.py  main.py
app/admin/: __init__.py  admin_auth.py  converter.py
app/alembic/: env.py
app/core/: __init__.py
app/core/config/: app.py  auth.py  cache.py  settings.py  view_prefix.py
app/middleware/: __init__.py
app/schemas/: __init__.py
app/static/css/: main.css
app/static/css/base/: reset.css  typography.css  variables.css
app/static/css/components/: buttons.css  footer.css  forms.css  header.css  preloader.css
app/static/css/layouts/: containers.css
app/templates/: base.html  index.html  page-missing.html
app/views/: __init__.py
