[project]
name = "fasth-singleauth"
version = "0.1.0"
description = "A streamlined FastAPI template for content-focused websites without user registration."
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "black>=25.12.0",
    "faker>=40.1.0",
    "fastapi>=0.128.0",
    "fastapi-cache2>=0.2.2",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "redis>=7.1.0",
    "sqladmin[full]>=0.22.0",
    "sqlalchemy[asyncio]>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = [".", "app"]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:slowapi.*:",
    "ignore::RuntimeWarning:coroutine 'noop' was never awaited"
]
